Changes in test Cases