@@ -1,19 +1,19 @@
-package com.example.demo.tests;
+package com.example.demo.service;
 
 import com.example.demo.entity.BungalowRate;
 import com.example.demo.repository.RateRepository;
-import com.example.demo.service.RateService;
+import com.example.demo.utils.Utils;
+import org.apache.poi.xssf.usermodel.XSSFWorkbook;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.*;
 import org.springframework.web.multipart.MultipartFile;
 
 import java.io.ByteArrayInputStream;
+import java.io.ByteArrayOutputStream;
+import java.io.IOException;
 import java.time.LocalDate;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.List;
-import java.util.Optional;
+import java.util.*;
 
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
@@ -26,184 +26,248 @@ class RateServiceTest {
     @Mock
     private RateRepository rateRepository;
 
+    @Mock
+    private Utils util;
+
     @BeforeEach
-    void setUp() {
+    void setup() {
         MockitoAnnotations.openMocks(this);
     }
 
-    // ===============================
-    // Test fetchAllRates
-    // ===============================
+    // ----------------------------------------------------------
+    // getAllRates
+    // ----------------------------------------------------------
     @Test
-    void fetchAllRates_shouldReturnAllRates() {
-        BungalowRate rate = new BungalowRate();
-        rate.setRateId(1);
-        when(rateRepository.findAll()).thenReturn(Collections.singletonList(rate));
+    void testGetAllRates_ShouldReturnAllRates() {
+        List<BungalowRate> mockRates = List.of(new BungalowRate(), new BungalowRate());
+        when(rateRepository.findAll()).thenReturn(mockRates);
 
-        List<BungalowRate> rates = rateService.fetchAllRates();
+        List<BungalowRate> result = rateService.getAllRates();
 
-        assertEquals(1, rates.size());
+        assertEquals(2, result.size());
         verify(rateRepository, times(1)).findAll();
     }
 
-    // ===============================
-    // Test fetchRateById
-    // ===============================
+    // ----------------------------------------------------------
+    // getRateById
+    // ----------------------------------------------------------
     @Test
-    void fetchRateById_existingRate_shouldReturnRate() {
+    void testGetRateById_WhenFound() {
         BungalowRate rate = new BungalowRate();
         rate.setRateId(1);
-        when(rateRepository.findById(1)).thenReturn(Optional.of(rate));
+        when(rateRepository.findById(1L)).thenReturn(Optional.of(rate));
 
-        BungalowRate result = rateService.fetchRateById(1L);
-        assertNotNull(result);
-        assertEquals(1, result.getRateId());
+        BungalowRate found = rateService.getRateById(1L);
+
+        assertEquals(1, found.getRateId());
+        verify(rateRepository).findById(1L);
     }
 
     @Test
-    void fetchRateById_nonExistingRate_shouldThrowException() {
-        when(rateRepository.findById(1)).thenReturn(Optional.empty());
-        assertThrows(RuntimeException.class, () -> rateService.fetchRateById(1L));
+    void testGetRateById_WhenNotFound() {
+        when(rateRepository.findById(1L)).thenReturn(Optional.empty());
+
+        RuntimeException ex = assertThrows(RuntimeException.class,
+                () -> rateService.getRateById(1L));
+
+        assertEquals("Rate not found with id 1", ex.getMessage());
     }
 
-    // ===============================
-    // Test addRate
-    // ===============================
+    // ----------------------------------------------------------
+    // createRate
+    // ----------------------------------------------------------
     @Test
-    void addRate_shouldNormalizeAndSave() {
+    void testCreateRate_ShouldPrepareSplitMergeAndSave() {
         BungalowRate rate = new BungalowRate();
-        rate.setBungalowId(1);
-        rate.setNights(2);
-        rate.setValue(200.0);
-        rate.setStayDateFrom(LocalDate.now());
-        rate.setStayDateTo(LocalDate.now().plusDays(1));
+        rate.setBungalowId(10);
+        rate.setStayDateFrom(LocalDate.of(2025, 1, 1));
+        rate.setStayDateTo(LocalDate.of(2025, 1, 5));
 
-        when(rateRepository.getOverlappingRates(anyInt(), any(), any())).thenReturn(Collections.emptyList());
-        when(rateRepository.save(any(BungalowRate.class))).thenAnswer(invocation -> invocation.getArgument(0));
+        when(rateRepository.save(any())).thenReturn(rate);
 
-        BungalowRate saved = rateService.addRate(rate);
+        BungalowRate result = rateService.createRate(rate);
 
-        assertEquals(1, saved.getNights());
-        assertEquals(100.0, saved.getValue());
-        verify(rateRepository, atLeastOnce()).save(any(BungalowRate.class));
+        assertNotNull(result);
+        verify(util).prepareNewRate(rate);
+        verify(rateRepository).save(rate);
+        verify(util, atLeast(0)).splitRateIfOverlapping(any(), any());
+        verify(rateRepository, atLeast(1)).findByBungalowIdAndBookingDateToIsNullAndStayDateToGreaterThanEqualAndStayDateFromLessThanEqual(
+                eq(10L), any(), any());
     }
 
-    // ===============================
-    // Test updateRate
-    // ===============================
+    // ----------------------------------------------------------
+    // closeRate
+    // ----------------------------------------------------------
     @Test
-    void updateRate_existingRate_shouldCloseAndAddNewRate() {
-        BungalowRate current = new BungalowRate();
-        current.setRateId(1);
-        when(rateRepository.findById(1)).thenReturn(Optional.of(current));
-        when(rateRepository.save(any(BungalowRate.class))).thenAnswer(invocation -> invocation.getArgument(0));
+    void testCloseRate_ShouldSetBookingDateTo() {
+        BungalowRate rate = new BungalowRate();
+        rate.setRateId(1);
+
+        when(rateRepository.findById(1L)).thenReturn(Optional.of(rate));
+
+        LocalDate today = LocalDate.now();
+        rateService.closeRate(1L, today);
+
+        assertEquals(today, rate.getBookingDateTo());
+        verify(rateRepository).save(rate);
+    }
+
+    @Test
+    void testCloseRate_NotFound() {
+        when(rateRepository.findById(99L)).thenReturn(Optional.empty());
+        assertThrows(RuntimeException.class, () -> rateService.closeRate(99L, LocalDate.now()));
+    }
+
+    // ----------------------------------------------------------
+    // deleteRate
+    // ----------------------------------------------------------
+    @Test
+    void testDeleteRate_Success() {
+        when(rateRepository.existsById(1L)).thenReturn(true);
+
+        rateService.deleteRate(1L);
+
+        verify(rateRepository).deleteById(1L);
+    }
+
+    @Test
+    void testDeleteRate_NotFound() {
+        when(rateRepository.existsById(1L)).thenReturn(false);
+        assertThrows(RuntimeException.class, () -> rateService.deleteRate(1L));
+    }
+
+    // ----------------------------------------------------------
+    // updateRate
+    // ----------------------------------------------------------
+    @Test
+    void testUpdateRate_ShouldCloseOldAndCreateNew() {
+        BungalowRate oldRate = new BungalowRate();
+        oldRate.setRateId(1);
+        oldRate.setBungalowId(20);
+
+        when(rateRepository.findById(1L)).thenReturn(Optional.of(oldRate));
+        when(rateRepository.save(any())).thenReturn(oldRate);
 
         BungalowRate updated = new BungalowRate();
-        updated.setBungalowId(1);
-        updated.setValue(150.0);
+        updated.setBungalowId(20);
         updated.setStayDateFrom(LocalDate.now());
-        updated.setStayDateTo(LocalDate.now().plusDays(1));
+        updated.setStayDateTo(LocalDate.now().plusDays(3));
 
-        BungalowRate result = rateService.updateRate(1L, updated);
+        doNothing().when(util).prepareNewRate(any());
 
-        assertNotNull(result);
-        assertEquals(150.0, result.getValue());
-        verify(rateRepository, atLeast(2)).save(any(BungalowRate.class));
+        rateService.updateRate(1L, updated);
+
+        verify(rateRepository, times(1)).save(oldRate);
+        verify(rateRepository, times(1)).save(updated);
     }
 
-    // ===============================
-    // Test calculateStayPrice
-    // ===============================
+    // ----------------------------------------------------------
+    // calculatePrice
+    // ----------------------------------------------------------
     @Test
-    void calculateStayPrice_withValidRates_shouldReturnTotal() {
+    void testCalculatePrice_ShouldReturnCorrectTotal() {
         BungalowRate rate = new BungalowRate();
-        rate.setBungalowId(1);
-        rate.setStayDateFrom(LocalDate.of(2025, 11, 1));
-        rate.setStayDateTo(LocalDate.of(2025, 11, 3));
-        rate.setValue(300.0);
-        rate.setNights(1);
-        rate.setBookingDateFrom(LocalDate.of(2025, 10, 1));
-        rate.setBookingDateTo(null);
+        rate.setBungalowId(5);
+        rate.setStayDateFrom(LocalDate.of(2025, 1, 1));
+        rate.setStayDateTo(LocalDate.of(2025, 1, 10));
+        rate.setBookingDateFrom(LocalDate.of(2024, 12, 1));
+        rate.setNights(10);
+        rate.setValue(1000.0);
 
-        when(rateRepository.findByBungalowIdOrderByStayDateFrom(1)).thenReturn(Collections.singletonList(rate));
+        when(rateRepository.findByBungalowIdOrderByStayDateFrom(5L))
+                .thenReturn(List.of(rate));
+        when(util.findApplicableRate(any(), any(), any(), any())).thenReturn(rate);
 
-        double total = rateService.calculateStayPrice(
-                1L,
-                LocalDate.of(2025, 11, 1),
-                LocalDate.of(2025, 11, 4),
-                LocalDate.of(2025, 10, 15)
+        double total = rateService.calculatePrice(
+                5L,
+                LocalDate.of(2025, 1, 1),
+                LocalDate.of(2025, 1, 4),
+                LocalDate.of(2024, 12, 15)
         );
 
-        assertEquals(900.0, total);
+        // 3 nights × (1000 / 10 per night)
+        assertEquals(300.0, total, 0.001);
     }
 
     @Test
-    void calculateStayPrice_noRate_shouldThrowException() {
-        when(rateRepository.findByBungalowIdOrderByStayDateFrom(anyInt())).thenReturn(Collections.emptyList());
+    void testCalculatePrice_NoRateFound_ShouldThrow() {
+        when(rateRepository.findByBungalowIdOrderByStayDateFrom(10L))
+                .thenReturn(Collections.emptyList());
 
-        assertThrows(RuntimeException.class, () -> rateService.calculateStayPrice(
-                1L,
-                LocalDate.of(2025, 11, 1),
-                LocalDate.of(2025, 11, 4),
-                LocalDate.of(2025, 10, 15)
-        ));
-    }
-
-    // ===============================
-    // Test removeRate
-    // ===============================
-    @Test
-    void removeRate_existing_shouldDelete() {
-        when(rateRepository.existsById(1)).thenReturn(true);
-        doNothing().when(rateRepository).deleteById(1);
-
-        rateService.removeRate(1L);
-        verify(rateRepository, times(1)).deleteById(1);
+        assertThrows(RuntimeException.class, () ->
+                rateService.calculatePrice(10L,
+                        LocalDate.of(2025, 1, 1),
+                        LocalDate.of(2025, 1, 3),
+                        LocalDate.now()));
     }
 
     @Test
-    void removeRate_nonExisting_shouldThrowException() {
-        when(rateRepository.existsById(1)).thenReturn(false);
-        assertThrows(RuntimeException.class, () -> rateService.removeRate(1L));
+    void testCalculatePrice_InvalidDates_ShouldThrow() {
+        assertThrows(IllegalArgumentException.class, () ->
+                rateService.calculatePrice(10L,
+                        LocalDate.of(2025, 1, 5),
+                        LocalDate.of(2025, 1, 1),
+                        LocalDate.now()));
     }
 
-    // ===============================
-    // Test closeRate
-    // ===============================
+    // ----------------------------------------------------------
+    // exportRatesToExcel
+    // ----------------------------------------------------------
     @Test
-    void closeRate_existing_shouldSetBookingDateTo() {
-        BungalowRate rate = new BungalowRate();
-        rate.setRateId(1);
-        rate.setBookingDateFrom(LocalDate.now());
-        when(rateRepository.findById(1)).thenReturn(Optional.of(rate));
-        when(rateRepository.save(rate)).thenReturn(rate);
-
-        LocalDate endDate = LocalDate.now().plusDays(1);
-        rateService.closeRate(1L, endDate);
-
-        assertEquals(endDate, rate.getBookingDateTo());
-        verify(rateRepository, times(1)).save(rate);
-    }
-
-    // ===============================
-    // Test Excel export
-    // ===============================
-    @Test
-    void exportRatesToExcel_shouldReturnData() throws Exception {
+    void testExportRatesToExcel_ShouldGenerateExcel() throws IOException {
         BungalowRate rate = new BungalowRate();
         rate.setRateId(1);
         rate.setBungalowId(1);
         rate.setStayDateFrom(LocalDate.now());
-        rate.setStayDateTo(LocalDate.now().plusDays(1));
-        rate.setNights(1);
-        rate.setValue(100.0);
+        rate.setStayDateTo(LocalDate.now().plusDays(2));
         rate.setBookingDateFrom(LocalDate.now());
+        rate.setNights(2);
+        rate.setValue(200.0);
 
-        when(rateRepository.findAll()).thenReturn(Collections.singletonList(rate));
+        when(rateRepository.findAll()).thenReturn(List.of(rate));
 
         ByteArrayInputStream stream = rateService.exportRatesToExcel();
+
         assertNotNull(stream);
         assertTrue(stream.available() > 0);
     }
-}
 
+    // ----------------------------------------------------------
+    // importRatesFromExcel
+    // ----------------------------------------------------------
+    @Test
+    void testImportRatesFromExcel_ShouldParseAndCreateRates() throws Exception {
+        // Create mock workbook
+        XSSFWorkbook workbook = new XSSFWorkbook();
+        var sheet = workbook.createSheet();
+        var header = sheet.createRow(0);
+        header.createCell(0).setCellValue("ID");
+        var row = sheet.createRow(1);
+        row.createCell(0).setCellValue(1);
+
+        ByteArrayOutputStream out = new ByteArrayOutputStream();
+        workbook.write(out);
+        workbook.close();
+
+        MultipartFile mockFile = mock(MultipartFile.class);
+        when(mockFile.getInputStream()).thenReturn(new ByteArrayInputStream(out.toByteArray()));
+
+        // --- FIX: mock a valid rate with data ---
+        BungalowRate rate = new BungalowRate();
+        rate.setBungalowId(1);
+        rate.setStayDateFrom(LocalDate.of(2025, 1, 1));
+        rate.setStayDateTo(LocalDate.of(2025, 1, 5));
+        rate.setNights(1);
+        rate.setValue(1000.0);
+        rate.setBookingDateFrom(LocalDate.of(2025, 1, 1));
+
+        when(util.parseRowToBungalowRate(any())).thenReturn(rate);
+        when(rateRepository.save(any())).thenReturn(rate);
+
+        rateService.importRatesFromExcel(mockFile);
+
+        verify(util, atLeastOnce()).parseRowToBungalowRate(any());
+        verify(rateRepository, atLeastOnce()).save(any());
+    }
+
+}
